--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">KeGOWidget</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="time_hint">Время: 13:37</string>
+    <string name="date_hint">Дата: 21.01.2101</string>
+    <string name="target_tint">Цель:Полететь на луну</string>
+    <string name="rndm_target">Другая</string>
+    <string name="appwidget_title">У тебя всего лишь</string>
+    <string name="target_title">Введите цель</string>
+    <string name="save_btn">Будет сделано!</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
 </resources>
